# bib-rs

./: Cargo.toml  README.md  test.bib
.github/workflows/: build.yml
src/: main.rs
src/bib2ref/: main.rs
src/bib2tsv/: main.rs
src/bibfmt/: main.rs
