[package]
name = "bib"
version = "0.1.0"
authors = ["Piotr Oleskiewicz"]
edition = "2018"

[dependencies]
biblatex = "0.4"
structopt = { version = "0.3", default-features = false }

[[bin]]
name = "bibfmt"
path = "src/bibfmt/main.rs"

[[bin]]
name = "bib2ref"
path = "src/bib2ref/main.rs"

[[bin]]
name = "bib2tsv"
path = "src/bib2tsv/main.rs"
